# planter

./: .gitignore  Cargo.toml  Dockerfile  PROTOCOL.md  README.md  docker-compose.yml  openapi.yaml  protocol_peer.py  requirements.txt  test_nats.sh  test_plan.json
.github/workflows/: ci.yml
arena/: package.json  pnpm-lock.yaml
arena/src/: App.jsx
src/: config.rs  lib.rs  main.rs  model.rs
src/diff/: mod.rs  plan.rs  tests.rs
src/diff/plan/: tests.rs
src/executor/: driver.rs  hooks.rs  mod.rs  runner.rs
src/executor/driver/: tests.rs
src/executor/hooks/: tests.rs
src/log/: event_bus.rs  logger.rs  mod.rs  service.rs  storage.rs
src/model/: tests.rs
src/nats/: client.rs  messages.rs  mod.rs  session.rs
src/routes/: apply.rs  diff.rs  health.rs  logs.rs  manifest.rs  mod.rs  phases.rs  plan.rs  state.rs
src/state/: mod.rs  redis.rs  tracker.rs
tests/: endpoints_integration.rs  integration_tests.rs  logs_stateless.rs  manifest_integration.rs  nats_http_integration.rs  nats_session_integration.rs  shutdown_reload.rs  shutdown_reload_real.rs  sync_from_integration.rs
tests/fixtures/: test_manifest.yaml
